--- a/boards/shields/MKB/MKB_L_Base.conf
+++ b/boards/shields/MKB/MKB_L_Base.conf
@@ -68,3 +68,20 @@ CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=7
 
 # Enable Layout shift target for JIS keyboard
 CONFIG_LAYOUT_SHIFT_TARGET_JIS=y
+
+#Prospector advertisement settings -------------------
+CONFIG_ZMK_STATUS_ADVERTISEMENT=y
+CONFIG_ZMK_STATUS_ADV_KEYBOARD_NAME="MeKaBu" # Display name
+
+CONFIG_BT=y
+CONFIG_BT_PERIPHERAL=y
+
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
+CONFIG_ZMK_BATTERY_REPORTING=y
+
+CONFIG_ZMK_STATUS_ADV_ACTIVITY_BASED=y
+CONFIG_ZMK_STATUS_ADV_ACTIVE_INTERVAL_MS=200
+CONFIG_ZMK_STATUS_ADV_IDLE_INTERVAL_MS=10000
+CONFIG_ZMK_STATUS_ADV_ACTIVITY_TIMEOUT_MS=120000
+
+CONFIG_PROSPECTOR_MAX_LAYERS=7
