--- a/build.yaml
+++ b/build.yaml
@@ -42,6 +42,48 @@ include:
       - -DOVERLAY_CONFIG=config/role_central.conf
     artifact-name: MKB_L_MODULE_KEY
 
+  - board: seeeduino_xiao_ble
+    shield: MKB_L_Base MKB_L_TB rgbled_adapter nice_oled
+    snippet: zmk-usb-logging studio-rpc-usb-uart
+    cmake-args:
+      - -DOVERLAY_CONFIG=config/role_peripheral.conf
+    artifact-name: MKB_L_MODULE_TB_PERI
+
+  - board: seeeduino_xiao_ble
+    shield: MKB_L_Base MKB_L_JOY rgbled_adapter nice_oled
+    snippet: zmk-usb-logging studio-rpc-usb-uart
+    cmake-args:
+      - -DOVERLAY_CONFIG=config/role_peripheral.conf
+    artifact-name: MKB_L_MODULE_JOY_PERI
+
+  - board: seeeduino_xiao_ble
+    shield: MKB_L_Base MKB_L_ENC rgbled_adapter nice_oled
+    snippet: zmk-usb-logging studio-rpc-usb-uart
+    cmake-args:
+      - -DOVERLAY_CONFIG=config/role_peripheral.conf
+    artifact-name: MKB_L_MODULE_ENC_PERI
+
+  - board: seeeduino_xiao_ble
+    shield: MKB_L_Base MKB_L_RZT rgbled_adapter nice_oled
+    snippet: zmk-usb-logging studio-rpc-usb-uart
+    cmake-args:
+      - -DOVERLAY_CONFIG=config/role_peripheral.conf
+    artifact-name: MKB_L_MODULE_RZT_PERI
+
+  - board: seeeduino_xiao_ble
+    shield: MKB_L_Base MKB_L_TPD rgbled_adapter nice_oled
+    snippet: zmk-usb-logging studio-rpc-usb-uart
+    cmake-args:
+      - -DOVERLAY_CONFIG=config/role_peripheral.conf
+    artifact-name: MKB_L_MODULE_TPD_PERI
+
+  - board: seeeduino_xiao_ble
+    shield: MKB_L_Base MKB_L_KEY rgbled_adapter nice_oled
+    snippet: zmk-usb-logging studio-rpc-usb-uart
+    cmake-args:
+      - -DOVERLAY_CONFIG=config/role_peripheral.conf
+    artifact-name: MKB_L_MODULE_KEY_PERI
+
 
 
   - board: seeeduino_xiao_ble
@@ -66,7 +108,7 @@ include:
     artifact-name: MKB_R_MODULE_JOY
 
   - board: seeeduino_xiao_ble
-    shield: MKB_R_Base MKB_R_ENC rgbled_adapter nice_oled
+    shield: MKB_R_Base MKB_R_ENC rgbled_adapter nice_oled 
     snippet: zmk-usb-logging studio-rpc-usb-uart
     cmake-args:
       - -DOVERLAY_CONFIG=config/role_peripheral.conf
@@ -85,6 +127,48 @@ include:
     cmake-args:
       - -DOVERLAY_CONFIG=config/role_peripheral.conf
     artifact-name: MKB_R_MODULE_KEY
+
+  - board: seeeduino_xiao_ble
+    shield: MKB_R_Base MKB_R_TB rgbled_adapter nice_oled
+    snippet: zmk-usb-logging studio-rpc-usb-uart
+    cmake-args:
+      - -DOVERLAY_CONFIG=config/role_central.conf
+    artifact-name: MKB_R_MODULE_TBv4_CENT
+    
+  - board: seeeduino_xiao_ble
+    shield: MKB_R_Base MKB_R_TBv3 rgbled_adapter nice_oled
+    snippet: zmk-usb-logging studio-rpc-usb-uart
+    cmake-args:
+      - -DOVERLAY_CONFIG=config/role_central.conf
+    artifact-name: MKB_R_MODULE_TBv3_CENT
+
+  - board: seeeduino_xiao_ble
+    shield: MKB_R_Base MKB_R_JOY rgbled_adapter nice_oled
+    snippet: zmk-usb-logging studio-rpc-usb-uart
+    cmake-args:
+      - -DOVERLAY_CONFIG=config/role_central.conf
+    artifact-name: MKB_R_MODULE_JOY_CENT
+
+  - board: seeeduino_xiao_ble
+    shield: MKB_R_Base MKB_R_ENC rgbled_adapter nice_oled
+    snippet: zmk-usb-logging studio-rpc-usb-uart
+    cmake-args:
+      - -DOVERLAY_CONFIG=config/role_central.conf
+    artifact-name: MKB_R_MODULE_ENC_CENT
+
+  - board: seeeduino_xiao_ble
+    shield: MKB_R_Base MKB_R_RZT rgbled_adapter nice_oled
+    snippet: zmk-usb-logging studio-rpc-usb-uart
+    cmake-args:
+      - -DOVERLAY_CONFIG=config/role_central.conf
+    artifact-name: MKB_R_MODULE_RZT_CENT
+
+  - board: seeeduino_xiao_ble
+    shield: MKB_R_Base MKB_R_KEY rgbled_adapter nice_oled
+    snippet: zmk-usb-logging studio-rpc-usb-uart
+    cmake-args:
+      - -DOVERLAY_CONFIG=config/role_central.conf
+    artifact-name: MKB_R_MODULE_KEY_CENT
 
 
 
