--- a/build.yaml
+++ b/build.yaml
@@ -1,177 +1,90 @@
 ---
 include:
   - board: seeeduino_xiao_ble
-    shield: MKB_L_Base MKB_L_TB rgbled_adapter nice_oled
+    shield: MKB_Central_Base MKB_TB_Cent rgbled_adapter nice_oled
     snippet: zmk-usb-logging studio-rpc-usb-uart
     cmake-args:
       - -DOVERLAY_CONFIG=config/role_central.conf
     artifact-name: MKB_L_MODULE_TB
 
   - board: seeeduino_xiao_ble
-    shield: MKB_L_Base MKB_L_JOY rgbled_adapter nice_oled
+    shield: MKB_Central_Base MKB_JOY_Cent rgbled_adapter nice_oled
     snippet: zmk-usb-logging studio-rpc-usb-uart
     cmake-args:
       - -DOVERLAY_CONFIG=config/role_central.conf
     artifact-name: MKB_L_MODULE_JOY
 
   - board: seeeduino_xiao_ble
-    shield: MKB_L_Base MKB_L_ENC rgbled_adapter nice_oled
+    shield: MKB_Central_Base MKB_ENC_Cent rgbled_adapter nice_oled
     snippet: zmk-usb-logging studio-rpc-usb-uart
     cmake-args:
       - -DOVERLAY_CONFIG=config/role_central.conf
     artifact-name: MKB_L_MODULE_ENC
 
   - board: seeeduino_xiao_ble
-    shield: MKB_L_Base MKB_L_RZT rgbled_adapter nice_oled
+    shield: MKB_Central_Base MKB_RZT_Cent rgbled_adapter nice_oled
     snippet: zmk-usb-logging studio-rpc-usb-uart
     cmake-args:
       - -DOVERLAY_CONFIG=config/role_central.conf
     artifact-name: MKB_L_MODULE_RZT
 
   - board: seeeduino_xiao_ble
-    shield: MKB_L_Base MKB_L_TPD rgbled_adapter nice_oled
+    shield: MKB_Central_Base MKB_TPD_Cent rgbled_adapter nice_oled
     snippet: zmk-usb-logging studio-rpc-usb-uart
     cmake-args:
       - -DOVERLAY_CONFIG=config/role_central.conf
     artifact-name: MKB_L_MODULE_TPD
 
   - board: seeeduino_xiao_ble
-    shield: MKB_L_Base MKB_L_KEY rgbled_adapter nice_oled
+    shield: MKB_Central_Base MKB_KEY_Cent rgbled_adapter nice_oled
     snippet: zmk-usb-logging studio-rpc-usb-uart
     cmake-args:
       - -DOVERLAY_CONFIG=config/role_central.conf
     artifact-name: MKB_L_MODULE_KEY
 
-  - board: seeeduino_xiao_ble
-    shield: MKB_L_Base MKB_L_TB rgbled_adapter nice_oled
-    snippet: zmk-usb-logging studio-rpc-usb-uart
-    cmake-args:
-      - -DOVERLAY_CONFIG=config/role_peripheral.conf
-    artifact-name: MKB_L_MODULE_TB_PERI
 
   - board: seeeduino_xiao_ble
-    shield: MKB_L_Base MKB_L_JOY rgbled_adapter nice_oled
-    snippet: zmk-usb-logging studio-rpc-usb-uart
-    cmake-args:
-      - -DOVERLAY_CONFIG=config/role_peripheral.conf
-    artifact-name: MKB_L_MODULE_JOY_PERI
-
-  - board: seeeduino_xiao_ble
-    shield: MKB_L_Base MKB_L_ENC rgbled_adapter nice_oled
-    snippet: zmk-usb-logging studio-rpc-usb-uart
-    cmake-args:
-      - -DOVERLAY_CONFIG=config/role_peripheral.conf
-    artifact-name: MKB_L_MODULE_ENC_PERI
-
-  - board: seeeduino_xiao_ble
-    shield: MKB_L_Base MKB_L_RZT rgbled_adapter nice_oled
-    snippet: zmk-usb-logging studio-rpc-usb-uart
-    cmake-args:
-      - -DOVERLAY_CONFIG=config/role_peripheral.conf
-    artifact-name: MKB_L_MODULE_RZT_PERI
-
-  - board: seeeduino_xiao_ble
-    shield: MKB_L_Base MKB_L_TPD rgbled_adapter nice_oled
-    snippet: zmk-usb-logging studio-rpc-usb-uart
-    cmake-args:
-      - -DOVERLAY_CONFIG=config/role_peripheral.conf
-    artifact-name: MKB_L_MODULE_TPD_PERI
-
-  - board: seeeduino_xiao_ble
-    shield: MKB_L_Base MKB_L_KEY rgbled_adapter nice_oled
-    snippet: zmk-usb-logging studio-rpc-usb-uart
-    cmake-args:
-      - -DOVERLAY_CONFIG=config/role_peripheral.conf
-    artifact-name: MKB_L_MODULE_KEY_PERI
-
-
-
-  - board: seeeduino_xiao_ble
-    shield: MKB_R_Base MKB_R_TB rgbled_adapter nice_oled
+    shield: MKB_Peripheral_Base MKB_TB_Peri rgbled_adapter nice_oled
     snippet: zmk-usb-logging studio-rpc-usb-uart
     cmake-args:
       - -DOVERLAY_CONFIG=config/role_peripheral.conf
     artifact-name: MKB_R_MODULE_TBv4
-    
+
   - board: seeeduino_xiao_ble
-    shield: MKB_R_Base MKB_R_TBv3 rgbled_adapter nice_oled
+    shield: MKB_Peripheral_Base MKB_TBv3_Peri rgbled_adapter nice_oled
     snippet: zmk-usb-logging studio-rpc-usb-uart
     cmake-args:
       - -DOVERLAY_CONFIG=config/role_peripheral.conf
     artifact-name: MKB_R_MODULE_TBv3
 
   - board: seeeduino_xiao_ble
-    shield: MKB_R_Base MKB_R_JOY rgbled_adapter nice_oled
+    shield: MKB_Peripheral_Base MKB_JOY_Peri rgbled_adapter nice_oled
     snippet: zmk-usb-logging studio-rpc-usb-uart
     cmake-args:
       - -DOVERLAY_CONFIG=config/role_peripheral.conf
     artifact-name: MKB_R_MODULE_JOY
 
   - board: seeeduino_xiao_ble
-    shield: MKB_R_Base MKB_R_ENC rgbled_adapter nice_oled 
+    shield: MKB_Peripheral_Base MKB_ENC_Peri rgbled_adapter nice_oled
     snippet: zmk-usb-logging studio-rpc-usb-uart
     cmake-args:
       - -DOVERLAY_CONFIG=config/role_peripheral.conf
     artifact-name: MKB_R_MODULE_ENC
 
   - board: seeeduino_xiao_ble
-    shield: MKB_R_Base MKB_R_RZT rgbled_adapter nice_oled
+    shield: MKB_Peripheral_Base MKB_RZT_Peri rgbled_adapter nice_oled
     snippet: zmk-usb-logging studio-rpc-usb-uart
     cmake-args:
       - -DOVERLAY_CONFIG=config/role_peripheral.conf
     artifact-name: MKB_R_MODULE_RZT
 
   - board: seeeduino_xiao_ble
-    shield: MKB_R_Base MKB_R_KEY rgbled_adapter nice_oled
+    shield: MKB_Peripheral_Base MKB_KEY_Peri rgbled_adapter nice_oled
     snippet: zmk-usb-logging studio-rpc-usb-uart
     cmake-args:
       - -DOVERLAY_CONFIG=config/role_peripheral.conf
     artifact-name: MKB_R_MODULE_KEY
 
-  - board: seeeduino_xiao_ble
-    shield: MKB_R_Base MKB_R_TB rgbled_adapter nice_oled
-    snippet: zmk-usb-logging studio-rpc-usb-uart
-    cmake-args:
-      - -DOVERLAY_CONFIG=config/role_central.conf
-    artifact-name: MKB_R_MODULE_TBv4_CENT
-    
-  - board: seeeduino_xiao_ble
-    shield: MKB_R_Base MKB_R_TBv3 rgbled_adapter nice_oled
-    snippet: zmk-usb-logging studio-rpc-usb-uart
-    cmake-args:
-      - -DOVERLAY_CONFIG=config/role_central.conf
-    artifact-name: MKB_R_MODULE_TBv3_CENT
-
-  - board: seeeduino_xiao_ble
-    shield: MKB_R_Base MKB_R_JOY rgbled_adapter nice_oled
-    snippet: zmk-usb-logging studio-rpc-usb-uart
-    cmake-args:
-      - -DOVERLAY_CONFIG=config/role_central.conf
-    artifact-name: MKB_R_MODULE_JOY_CENT
-
-  - board: seeeduino_xiao_ble
-    shield: MKB_R_Base MKB_R_ENC rgbled_adapter nice_oled
-    snippet: zmk-usb-logging studio-rpc-usb-uart
-    cmake-args:
-      - -DOVERLAY_CONFIG=config/role_central.conf
-    artifact-name: MKB_R_MODULE_ENC_CENT
-
-  - board: seeeduino_xiao_ble
-    shield: MKB_R_Base MKB_R_RZT rgbled_adapter nice_oled
-    snippet: zmk-usb-logging studio-rpc-usb-uart
-    cmake-args:
-      - -DOVERLAY_CONFIG=config/role_central.conf
-    artifact-name: MKB_R_MODULE_RZT_CENT
-
-  - board: seeeduino_xiao_ble
-    shield: MKB_R_Base MKB_R_KEY rgbled_adapter nice_oled
-    snippet: zmk-usb-logging studio-rpc-usb-uart
-    cmake-args:
-      - -DOVERLAY_CONFIG=config/role_central.conf
-    artifact-name: MKB_R_MODULE_KEY_CENT
-
-
 
   - board: seeeduino_xiao_ble
     shield: settings_reset
-
