--- a/boards/shields/MKB/MKB_L_JOY.conf
+++ b/boards/shields/MKB/MKB_L_JOY.conf
@@ -6,3 +6,4 @@ CONFIG_ANALOG_INPUT_LOG_LEVEL_DBG=y
 CONFIG_ANALOG_INPUT_REPORT_INTERVAL_MIN=22
 CONFIG_ANALOG_INPUT_LOG_DBG_RAW=n
 CONFIG_ANALOG_INPUT_LOG_DBG_REPORT=n
+CONFIG_ANALOG_INPUT_WORKQUEUE_STACK_SIZE=768
