--- a/boards/shields/MKB/MKB_L_Base.conf
+++ b/boards/shields/MKB/MKB_L_Base.conf
@@ -7,14 +7,14 @@ CONFIG_ZMK_POINTING=y
 # Basic hardware configurations
 CONFIG_INPUT=y
 CONFIG_PINCTRL=y
-CONFIG_I2C=y
+# CONFIG_I2C=y
 CONFIG_I2C_NRFX=y
-CONFIG_NFCT_PINS_AS_GPIOS=y
 CONFIG_SENSOR=y
 
 # Debug logging settings
 CONFIG_ZMK_USB_LOGGING=y
 CONFIG_LOG_PROCESS_THREAD_STARTUP_DELAY_MS=8000
+CONFIG_LOG_PROCESS_THREAD_STACK_SIZE=640
 
 # Split keyboard configuration
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=1
@@ -23,6 +23,7 @@ CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=1
 CONFIG_ZMK_DISPLAY=y
 # CONFIG_ZMK_WIDGET_WPM_STATUS=y
 CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
+CONFIG_ZMK_DISPLAY_DEDICATED_THREAD_STACK_SIZE=2048
 # CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
 
 # Rotary encoder configuration
@@ -45,10 +46,13 @@ CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
 
 # Thread stack size configurations
 CONFIG_ZMK_BLE_THREAD_STACK_SIZE=2048
-CONFIG_ZMK_LOW_PRIORITY_THREAD_STACK_SIZE=2048
-CONFIG_INPUT_THREAD_STACK_SIZE=2048
+CONFIG_ZMK_LOW_PRIORITY_THREAD_STACK_SIZE=1664
+CONFIG_INPUT_THREAD_STACK_SIZE=1664
 CONFIG_ZMK_SPLIT_BLE_PERIPHERAL_STACK_SIZE=2048
-CONFIG_ZMK_SPLIT_BLE_CENTRAL_SPLIT_RUN_STACK_SIZE=3096
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_SPLIT_RUN_STACK_SIZE=1920
+CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=2304
+CONFIG_USB_WORKQUEUE_STACK_SIZE=896
+CONFIG_ZMK_STUDIO_RPC_THREAD_STACK_SIZE=2560
 
 # Bluetooth PHY settings
 CONFIG_BT_CTLR_PHY_2M=n
