--- a/boards/shields/MKB/MKB_L_TB.conf
+++ b/boards/shields/MKB/MKB_L_TB.conf
@@ -2,7 +2,7 @@
 CONFIG_SPI=y
 
 # PMW3610 optical sensor settings
-CONFIG_PMW3610=y
+CONFIG_PMW3610_ALT=y
 CONFIG_PMW3610_ALT_SWAP_XY=n
 CONFIG_PMW3610_ALT_INVERT_X=n
 CONFIG_PMW3610_ALT_INVERT_Y=y
