--- a/build.yaml
+++ b/build.yaml
@@ -1,102 +1,102 @@
 ---
 include:
 # Left Shields / Default - with AML
-  - board: seeeduino_xiao_ble
-    shield: MKB_L_Base MKB_L_TB rgbled_adapter nice_oled
-    snippet: Default zmk-usb-logging studio-rpc-usb-uart
-    artifact-name: MKB_L_MODULE_TB
+  # - board: seeeduino_xiao_ble
+  #   shield: MKB_L_Base MKB_L_TB rgbled_adapter nice_oled
+  #   snippet: Default zmk-usb-logging studio-rpc-usb-uart
+  #   artifact-name: MKB_L_MODULE_TB
 
-  - board: seeeduino_xiao_ble
-    shield: MKB_L_Base MKB_L_JOY rgbled_adapter nice_oled
-    snippet: Default zmk-usb-logging studio-rpc-usb-uart
-    artifact-name: MKB_L_MODULE_JOY
+  # - board: seeeduino_xiao_ble
+  #   shield: MKB_L_Base MKB_L_JOY rgbled_adapter nice_oled
+  #   snippet: Default zmk-usb-logging studio-rpc-usb-uart
+  #   artifact-name: MKB_L_MODULE_JOY
 
-  - board: seeeduino_xiao_ble
-    shield: MKB_L_Base MKB_L_ENC rgbled_adapter nice_oled
-    snippet: Default zmk-usb-logging studio-rpc-usb-uart
-    artifact-name: MKB_L_MODULE_ENC
+  # - board: seeeduino_xiao_ble
+  #   shield: MKB_L_Base MKB_L_ENC rgbled_adapter nice_oled
+  #   snippet: Default zmk-usb-logging studio-rpc-usb-uart
+  #   artifact-name: MKB_L_MODULE_ENC
 
-  - board: seeeduino_xiao_ble
-    shield: MKB_L_Base MKB_L_RZT rgbled_adapter nice_oled
-    snippet: Default zmk-usb-logging studio-rpc-usb-uart
-    artifact-name: MKB_L_MODULE_RZT
+  # - board: seeeduino_xiao_ble
+  #   shield: MKB_L_Base MKB_L_RZT rgbled_adapter nice_oled
+  #   snippet: Default zmk-usb-logging studio-rpc-usb-uart
+  #   artifact-name: MKB_L_MODULE_RZT
 
   - board: seeeduino_xiao_ble
     shield: MKB_L_Base MKB_L_TPD rgbled_adapter nice_oled
     snippet: Default zmk-usb-logging studio-rpc-usb-uart
     artifact-name: MKB_L_MODULE_TPD
 
-  - board: seeeduino_xiao_ble
-    shield: MKB_L_Base MKB_L_KEY rgbled_adapter nice_oled
-    snippet: Default zmk-usb-logging studio-rpc-usb-uart
-    artifact-name: MKB_L_MODULE_KEY
+  # - board: seeeduino_xiao_ble
+  #   shield: MKB_L_Base MKB_L_KEY rgbled_adapter nice_oled
+  #   snippet: Default zmk-usb-logging studio-rpc-usb-uart
+  #   artifact-name: MKB_L_MODULE_KEY
 
 # Right Shields
-  - board: seeeduino_xiao_ble
-    shield: MKB_R_Base MKB_R_TB rgbled_adapter nice_oled
-    snippet: zmk-usb-logging studio-rpc-usb-uart
-    artifact-name: MKB_R_MODULE_TBv4
+  # - board: seeeduino_xiao_ble
+  #   shield: MKB_R_Base MKB_R_TB rgbled_adapter nice_oled
+  #   snippet: zmk-usb-logging studio-rpc-usb-uart
+  #   artifact-name: MKB_R_MODULE_TBv4
     
-  - board: seeeduino_xiao_ble
-    shield: MKB_R_Base MKB_R_TBv3 rgbled_adapter nice_oled
-    snippet: zmk-usb-logging studio-rpc-usb-uart
-    artifact-name: MKB_R_MODULE_TBv3
+  # - board: seeeduino_xiao_ble
+  #   shield: MKB_R_Base MKB_R_TBv3 rgbled_adapter nice_oled
+  #   snippet: zmk-usb-logging studio-rpc-usb-uart
+  #   artifact-name: MKB_R_MODULE_TBv3
 
-  - board: seeeduino_xiao_ble
-    shield: MKB_R_Base MKB_R_JOY rgbled_adapter nice_oled
-    snippet: zmk-usb-logging studio-rpc-usb-uart
-    artifact-name: MKB_R_MODULE_JOY
+  # - board: seeeduino_xiao_ble
+  #   shield: MKB_R_Base MKB_R_JOY rgbled_adapter nice_oled
+  #   snippet: zmk-usb-logging studio-rpc-usb-uart
+  #   artifact-name: MKB_R_MODULE_JOY
 
-  - board: seeeduino_xiao_ble
-    shield: MKB_R_Base MKB_R_ENC rgbled_adapter nice_oled
-    snippet: zmk-usb-logging studio-rpc-usb-uart
-    artifact-name: MKB_R_MODULE_ENC
+  # - board: seeeduino_xiao_ble
+  #   shield: MKB_R_Base MKB_R_ENC rgbled_adapter nice_oled
+  #   snippet: zmk-usb-logging studio-rpc-usb-uart
+  #   artifact-name: MKB_R_MODULE_ENC
 
-  - board: seeeduino_xiao_ble
-    shield: MKB_R_Base MKB_R_RZT rgbled_adapter nice_oled
-    snippet: zmk-usb-logging studio-rpc-usb-uart
-    artifact-name: MKB_R_MODULE_RZT
+  # - board: seeeduino_xiao_ble
+  #   shield: MKB_R_Base MKB_R_RZT rgbled_adapter nice_oled
+  #   snippet: zmk-usb-logging studio-rpc-usb-uart
+  #   artifact-name: MKB_R_MODULE_RZT
 
   - board: seeeduino_xiao_ble
     shield: MKB_R_Base MKB_R_TPD rgbled_adapter nice_oled
     snippet: zmk-usb-logging studio-rpc-usb-uart
     artifact-name: MKB_R_MODULE_TPD
 
-  - board: seeeduino_xiao_ble
-    shield: MKB_R_Base MKB_R_KEY rgbled_adapter nice_oled
-    snippet: zmk-usb-logging studio-rpc-usb-uart
-    artifact-name: MKB_R_MODULE_KEY
+  # - board: seeeduino_xiao_ble
+  #   shield: MKB_R_Base MKB_R_KEY rgbled_adapter nice_oled
+  #   snippet: zmk-usb-logging studio-rpc-usb-uart
+  #   artifact-name: MKB_R_MODULE_KEY
 
 # Left Shields / noAML - without AML
-  - board: seeeduino_xiao_ble
-    shield: MKB_L_Base MKB_L_TB rgbled_adapter nice_oled
-    snippet: noAML zmk-usb-logging studio-rpc-usb-uart
-    artifact-name: MKB_L_MODULE_TB_noAML
+  # - board: seeeduino_xiao_ble
+  #   shield: MKB_L_Base MKB_L_TB rgbled_adapter nice_oled
+  #   snippet: noAML zmk-usb-logging studio-rpc-usb-uart
+  #   artifact-name: MKB_L_MODULE_TB_noAML
 
-  - board: seeeduino_xiao_ble
-    shield: MKB_L_Base MKB_L_JOY rgbled_adapter nice_oled
-    snippet: noAML zmk-usb-logging studio-rpc-usb-uart
-    artifact-name: MKB_L_MODULE_JOY_noAML
+  # - board: seeeduino_xiao_ble
+  #   shield: MKB_L_Base MKB_L_JOY rgbled_adapter nice_oled
+  #   snippet: noAML zmk-usb-logging studio-rpc-usb-uart
+  #   artifact-name: MKB_L_MODULE_JOY_noAML
 
-  - board: seeeduino_xiao_ble
-    shield: MKB_L_Base MKB_L_ENC rgbled_adapter nice_oled
-    snippet: noAML zmk-usb-logging studio-rpc-usb-uart
-    artifact-name: MKB_L_MODULE_ENC_noAML
+  # - board: seeeduino_xiao_ble
+  #   shield: MKB_L_Base MKB_L_ENC rgbled_adapter nice_oled
+  #   snippet: noAML zmk-usb-logging studio-rpc-usb-uart
+  #   artifact-name: MKB_L_MODULE_ENC_noAML
 
-  - board: seeeduino_xiao_ble
-    shield: MKB_L_Base MKB_L_RZT rgbled_adapter nice_oled
-    snippet: noAML zmk-usb-logging studio-rpc-usb-uart
-    artifact-name: MKB_L_MODULE_RZT_noAML
+  # - board: seeeduino_xiao_ble
+  #   shield: MKB_L_Base MKB_L_RZT rgbled_adapter nice_oled
+  #   snippet: noAML zmk-usb-logging studio-rpc-usb-uart
+  #   artifact-name: MKB_L_MODULE_RZT_noAML
 
-  - board: seeeduino_xiao_ble
-    shield: MKB_L_Base MKB_L_TPD rgbled_adapter nice_oled
-    snippet: noAML zmk-usb-logging studio-rpc-usb-uart
-    artifact-name: MKB_L_MODULE_TPD_noAML
+  # - board: seeeduino_xiao_ble
+  #   shield: MKB_L_Base MKB_L_TPD rgbled_adapter nice_oled
+  #   snippet: noAML zmk-usb-logging studio-rpc-usb-uart
+  #   artifact-name: MKB_L_MODULE_TPD_noAML
 
-  - board: seeeduino_xiao_ble
-    shield: MKB_L_Base MKB_L_KEY rgbled_adapter nice_oled
-    snippet: noAML zmk-usb-logging studio-rpc-usb-uart
-    artifact-name: MKB_L_MODULE_KEY_noAML
+  # - board: seeeduino_xiao_ble
+  #   shield: MKB_L_Base MKB_L_KEY rgbled_adapter nice_oled
+  #   snippet: noAML zmk-usb-logging studio-rpc-usb-uart
+  #   artifact-name: MKB_L_MODULE_KEY_noAML
 
 # Settings Reset
   - board: seeeduino_xiao_ble
