--- a/.github/workflows/build-nix.yml
+++ b/.github/workflows/build-nix.yml
@@ -25,6 +25,7 @@ jobs:
     with:
       build_matrix_path: build.yaml
       config_path: config
+      toolchain: zephyr
   
   debug:
     runs-on: ubuntu-latest
